VideoFrame does not need to inherit from MediaSample https://bugs.webkit.org/show_bug.cgi?id=238071

Reviewed by Eric Carlson.

Update MediaSample, MediaSampleAVFObjC and VideoFrame according the separation.
This is a refactoring, covered by existing tests.

* SourcesCocoa.txt:
* WebCore.xcodeproj/project.pbxproj:
* platform/MediaSample.h:
* platform/VideoFrame.cpp:
* platform/VideoFrame.h:
* platform/VideoFrame.mm: Added.
* platform/graphics/avfoundation/objc/MediaSampleAVFObjC.h:
* platform/graphics/avfoundation/objc/MediaSampleAVFObjC.mm:
* platform/graphics/gstreamer/VideoFrameGStreamer.cpp:
* platform/graphics/gstreamer/VideoFrameGStreamer.h:



Canonical link: https://commits.webkit.org/248776@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@291744 268f45cc-cd09-0410-ab3c-d52691b4dbfc